--- a/README.org
+++ b/README.org
@@ -54,6 +54,16 @@ its content.
 
 ** Noviembre 2023
 
+*** 18-Nov-23
++ [[https://arxiv.org/abs/2311.08860][Proving calculational proofs correct]]. ~ Andrew T. Walter, Ankit Kumar, Panagiotis Manolios. #ITP #ACL2 #Logic
++ [[https://arxiv.org/abs/2311.08855v1][A case study in analytic protocol analysis in ACL2]]. ~ Max von Hippel et als. #ITP #ACL2
++ [[https://arxiv.org/abs/2311.08866v1][A formalization of finite group theory: Part II]]. ~ David M. Russinoff. #ITP #ACL2 #Math
++ [[https://arxiv.org/abs/2311.08854v1][A formalization of finite group theory: Part III]]. ~ David M. Russinoff. #ITP #ACL2 #Math
++ [[https://arxiv.org/abs/2311.08858v1][Formal verification of zero-knowledge circuits]]. ~ Alessandro Coglio, Eric McCarthy, Eric W. Smith. #ITP #ACL2
++ [[https://arxiv.org/abs/2311.08861v1][ACL2 proofs of nonlinear inequalities with Imandra]]. ~ Grant Passmore. #ITP #ACL2 #Math
++ [[https://arxiv.org/abs/2311.08862v1][Verification of a Rust implementation of Knuth's dancing links using ACL2]]. ~ David S. Hardin. #ITP #ACL2
++ [[https://arxiv.org/abs/2311.07618][Large language models' understanding of math: Source criticism and extrapolation]]. ~ Roozbeh Yousefzadeh, Xuenan Cao. #LLMs #Math #ITP #LeanProver
+
 *** 17-Nov-23
 + [[https://arxiv.org/abs/1503.08744][Propositional calculus in Coq]]. ~ Floris van Doorn. #ITP #Coq #Logic
 + [[https://www.isa-afp.org/entries/Nominal_Myhill_Nerode.html][Myhill-Nerode theorem for nominal G-automata (in Isabelle/HOL)]]. ~ Cárolos Laméris. #ITP #IsabelleHOL
