--- a/README.org
+++ b/README.org
@@ -54,6 +54,9 @@ its content.
 
 ** Noviembre 2023
 
+*** 28-Nov-23
++ [[https://github.com/google-deepmind/debate][Stochastic doubly-efficient debate formalization]]. ~ Geoffrey Irving. #ITP #LeanProver
+
 *** 26-Nov-23
 + [[https://www.isa-afp.org/entries/Q0_Soundness.html][Soundness of the Q0 proof system for higher-order logic (in Isabelle/HOL)]]. ~ Anders Schlichtkrull. #ITP #IsabelleHOL #Logic #Math
 + [[https://www.isa-afp.org/entries/Cardinality_Continuum.html][The cardinality of the continuum (in Isabelle/HOL)]]. ~ Manuel Eberl. #ITP #IsabelleHOL #Math
